--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+#dropdowns{
+  padding-top:10px;
+  width:100%;
+  text-align:center;
+  border-bottom: solid 1px rgba(0,0,0,.12);
+
+  .mat-form-field{
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
+.mat-drawer-opened{
+  width:400px;
+  padding:10px;
+}
+
+.mat-drawer-container{
+  height:90%;
+}
+
+#main{
+  height:100%;
+}
