--- a/src/app/shared/pages/home/home.component.html
+++ b/src/app/shared/pages/home/home.component.html
@@ -36,11 +36,16 @@
     <mat-sidenav-content>
       <div *ngIf="sensorData">
         <h1 style="text-align:center">Sensor Graph</h1>
+        <div class="graph-functions">
+          <button mat-raised-button color="primary" (click)="openDialog()">Add Sensor</button>
+          <button mat-raised-button color="primary" (click)="addEventDialog()">Add Event</button>
+        </div>
         <highcharts-chart
           [Highcharts]="Highcharts"
           [constructorType]="'stockChart'"
           [options]="chartOptions"
-          [update]="true"
+          [oneToOne]=true
+          [(update)]="updateFromInput"
           style="width:100%; height:500px; display:block;"
           ></highcharts-chart>
       </div>
