--- a/src/app/shared/pages/home/home.component.html
+++ b/src/app/shared/pages/home/home.component.html
@@ -30,6 +30,10 @@
             </div>
           </div>
         </div>
+        <h3 style="text-align:center;">Additional Metadata</h3>
+        <div class="graph-functions">
+          <button mat-raised-button color="primary" (click)="addMetadataDialog()">Add Metadata</button>
+        </div>
       </div>
     </mat-sidenav>
 
