--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~ng-pick-datetime/assets/style/picker.min.css";
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
@@ -42,4 +43,12 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   .mat-raised-button{
     margin: 0 10px 0 10px;
   }
+}
+
+.meta-input{
+  width: 100%;
+}
+
+.error-message{
+  color: red;
 }
