--- a/src/app/shared/pages/dialogs/add-metadata/add-metadata.component.html
+++ b/src/app/shared/pages/dialogs/add-metadata/add-metadata.component.html
@@ -2,11 +2,11 @@
 
 <mat-dialog-content>
   <div class="form-container">
-    <mat-form-field class="meta-input">
+    <mat-form-field class="form-inputs">
       <mat-label>Metadata Title</mat-label>
       <input matInput placeholder="Title" [(ngModel)]="metaTitle">
     </mat-form-field>
-    <mat-form-field class="meta-input">
+    <mat-form-field class="form-inputs">
       <mat-label>Metadata Description</mat-label>
       <textarea matInput placeholder="Description" [(ngModel)]="metaDescription"></textarea>
     </mat-form-field>
