--- a/src/styles.scss
+++ b/src/styles.scss
@@ -65,5 +65,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   text-align: center;
   .form-inputs{
     width: 80%;
+    margin:0 auto;
   }
 }
