--- a/src/app/shared/pages/home/home.component.html
+++ b/src/app/shared/pages/home/home.component.html
@@ -57,6 +57,13 @@
           [(update)]="updateFromInput"
           style="width:100%; height:500px; display:block;"
           ></highcharts-chart>
+        <div *ngIf="eventData" style="text-align: center">
+          <h3>Event Data: {{eventData.title}}</h3>
+          <p>{{eventData.description}}</p>
+          <div *ngIf="eventData.cluster">
+            <p>Impacted cluster: {{eventData.cluster}}</p>
+          </div>
+        </div>
       </div>
     </mat-sidenav-content>
 
